--- a/all/pom.xml
+++ b/all/pom.xml
@@ -11,17 +11,17 @@
 	<dependencies>
 		<dependency>
 			<groupId>io.reka</groupId>
+			<artifactId>reka-core</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.reka</groupId>
 			<artifactId>reka-main</artifactId>
 			<version>0.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.reka</groupId>
 			<artifactId>reka-common</artifactId>
-			<version>0.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>io.reka</groupId>
-			<artifactId>reka-core</artifactId>
 			<version>0.1.0</version>
 		</dependency>
 		<dependency>
@@ -67,6 +67,11 @@
 		<dependency>
 			<groupId>io.reka</groupId>
 			<artifactId>reka-smtp</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.reka</groupId>
+			<artifactId>reka-use-net-play</artifactId>
 			<version>0.1.0</version>
 		</dependency>
 	</dependencies>
