--- a/all/pom.xml
+++ b/all/pom.xml
@@ -31,6 +31,11 @@
 		</dependency>
 		<dependency>
 			<groupId>io.reka</groupId>
+			<artifactId>reka-twilio</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.reka</groupId>
 			<artifactId>reka-mustache</artifactId>
 			<version>0.1.0</version>
 		</dependency>
