--- a/modules/reka-smtp/pom.xml
+++ b/modules/reka-smtp/pom.xml
@@ -18,6 +18,12 @@
 			<version>${core.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-handler</artifactId>
+			<version>4.0.24.Final</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -50,31 +56,29 @@
 			</exclusions>
 		</dependency>
 
-	<!-- 
+		<!-- <dependency> <groupId>javax.mail</groupId> <artifactId>mail</artifactId> 
+			<version>1.4.5</version> </dependency> -->
+
+
+<!-- 
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
-			<version>1.4.5</version>
+			<version>1.4.7</version>
 		</dependency>
 		 -->
-		 
-<dependency>
-	<groupId>javax.mail</groupId>
-	<artifactId>mail</artifactId>
-	<version>1.4.7</version>
-</dependency>
 
-		 <dependency>
-	<groupId>commons-io</groupId>
-	<artifactId>commons-io</artifactId>
-	<version>2.4</version>
-</dependency>
-		 
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-email</artifactId>
-			<version>1.3.2</version>
+			<version>1.3.3</version>
+			<!-- 
 			<exclusions>
 				<exclusion>
 					<artifactId>activation</artifactId>
@@ -85,6 +89,7 @@
 					<groupId>javax.mail</groupId>
 				</exclusion>
 			</exclusions>
+			 -->
 		</dependency>
 	</dependencies>
 
